source/assets/stylesheets/_wordcamp.lodz.scss
// Gutenberg Blocks 
.wp-block-table {

    &.alignfull {

        td {
            font-size: $unit-s2;

            strong {
                display: block;
                font-size: $unit-s;
                color: $color-brand-secondary;
            }
        }

        @include breakpoint(extra-large) {

            width: calc(100% + 400px);
            transform: translateX(-200px);
        
        }
    }

}

.category {
    h1 {

        &.page-title {
            font-size: $unit-m;
            padding-bottom: $unit-l;
            margin-bottom: $unit-l;
            position: relative;

            &:before {
                content: "";
                width: 100px;
                height: 3px;
                position: absolute;
                bottom: 0;
                left: 0;
                transform: translateX(-30px);
                background-color: $color-brand-secondary; 
            }
        }
    
    }
}

.wp-block-gallery {
    margin-top: rem(40);
}

.page {
    h1 {

        &.entry-title {
            font-size: $unit-xl;
            padding-bottom: $unit-l;
            margin-bottom: $unit-l;
            position: relative;

            &:before {
                content: "";
                width: 100px;
                height: 3px;
                position: absolute;
                bottom: 0;
                left: 0;
                transform: translateX(-30px);
                background-color: $color-brand-secondary; 
            }
        }
    
    }
}

.contact-form label.checkbox {
    display: flex !important;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;

    input {
        width: 13%;
        margin-right: 10px;
        margin-bottom: 0;
    }

    span {
        width: 20%; 
    }
}

.wp-block-file {
    margin-bottom: rem(20);
    padding: rem(15);
    border: rem(1) solid rgba($color-brand-primary, 0.1);
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;

    a {
        color: $color-brand-primary;
        font-size: $unit-s2;
        font-weight: 700;

        &:hover, &:focus {
            color: $color-brand-secondary;
        }
    }

    .wp-block-file__button {
        padding: $unit-s2 $unit-s2;
        border-radius: 2px;
        background-color: $color-brand-secondary;
        color: $color-brand-white;
        font-weight: 700;

        &:hover, &:focus {
            background-color: $color-brand-primary;
        }
    }
}

.wcorg-sponsor-level-patroni-medialni {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    h2 {
        width: 100%;
    }
}

.wcorg-sponsor {
    padding: rem(30);
    margin-bottom: rem(30);
    border: rem(1) solid rgba($color-brand-primary, 0.1);
    display: block;
    width: 100%;

    .wcorg-sponsor-level-patroni-medialni & {
        width: 50%;

        img {
            margin: 0 auto !important;
        }
    }

    img {
        margin-bottom: rem(30);
        max-height: 6rem !important;
    }

    h2 {
        color: $color-brand-secondary !important;
        font-size: rem(25);
    }

    .wcorg-sponsor-description {
        text-align: left !important;
        p, ul, li {
            display: block !important;
            text-align: left !important;
        }
    }
}

.sponsor-level {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    text-align: center;

    .sponsor-level-title {
        width: 100%;
        margin: rem(50) rem(0)rem(30) rem(0) !important;
        font-size: rem(23);
        font-weight: 700 !important;
        position: relative;

        &:after {
            content: "";
            width: rem(500);
            height: rem(20);
            background: rgba($color-brand-primary, 0.04);
            z-index: -1;
            position: absolute;
            left: 50%;
            bottom: -5px;
            transform: translateX(-50%);
        }
    }

    .sponsor-logo {
        width: 50%;
        background: none !important;
        padding: rem(10) rem(20);
        display: block !important;

        img {
            margin: 0 auto;
            max-height: rem(62) !important;
        }
    }
}

#subscribe-email {
    @include breakpoint(large) {

        width: 75% !important;
        margin: 0 !important;

    }

    @include breakpoint(to-small) {

        width: 100% !important;
        margin: 0 !important;

        input {
            margin: 10px 0 0 0 !important;
            width: 100% !important;
        }

    }
}

#subscribe-submit {
    @include breakpoint(large) {

        width: 25% !important;
        margin: 0 !important;
        transform: translateY(4px);

    }

    @include breakpoint(to-small) {

        width: 100% !important;
        margin: 0 !important;

        input, button {
            margin: 10px 0 0 0 !important;
            width: 100% !important;
        }
    }
}

.widget_nav_menu {
    padding: 0!important;

    ul {
        li {
            font-size: 14px !important;

            a {
                color: $color-brand-primary !important;
                font-size: 14px !important;

                &:hover, &:focus {
                    color: $color-brand-white !important;
                    background-color: $color-brand-primary !important;
                }
            }
        }
    }
}

.wp-block-button__link {
    color: $color-brand-white !important;
    border-radius: 0 !important;
    font-weight: 800;
    background: $color-brand-secondary !important;
    background-image: none !important;

    &:hover, &:focus {
        background: $color-brand-primary !important;
    }
}

.widget-area {
    .sponsor-level {
        &.pakiet-fabrykant,
        &.patroni-medialni {
            display: none;
        }
    }
}

.navigation {
    margin-bottom: 40px !important;
}

.wp-block-image {
    &.alignfull,
    &.alignwide {
        @include breakpoint(large) {

            max-width: 1000px;
            transform: translateX(-100px);
    
        }
    }
}

